# test_api_shop

./: .gitignore  Dockerfile.local  README.md  backends.py  constants.py  docker-compose.yml  exceptions.py  pyproject.toml  pytest.ini  start-local.sh
api/: urls.py
api/spectacular/: urls.py
carts/: admin.py  exceptions.py  urls.py
carts/migrations/: 0001_initial.py  0002_alter_cartitem_cart.py  0003_remove_cartitem_cart_remove_cartitem_product_and_more.py  0004_initial.py
carts/models/: __init__.py  cart.py  carts.py
carts/repositories/: cart.py  carts.py
carts/views/: cart.py  carts.py
common/: exceptions.py
common/models/: mixins.py
common/serializers/: auth.py  filters.py  mixins.py
common/views/: auth.py
config/: local_settings.py  settings.py  urls.py
orders/: admin.py  urls.py
orders/migrations/: 0001_initial.py
orders/models/: orders.py
orders/views/: orders.py
products/: admin.py  exceptions.py  urls.py
products/migrations/: 0001_initial.py  0002_alter_product_description_alter_product_name_and_more.py  0003_category.py  0004_category_product.py  0005_alter_category_product.py  0006_remove_category_product_product_category.py  0007_remove_product_category_product_category.py  0008_remove_product_category_delete_category.py  0009_category_product_category.py  0010_alter_category_options.py
products/models/: __init__.py  category.py  product.py
products/repositories/: products.py
products/services/: products.py
products/views/: category.py  products.py
tests/: confest.py  test_carts.py  test_categories.py  test_products.py
(+7 files in other folders)
